<resources>
<!--공통-->
    <string name="app_name">My notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="test">Test</string>

    <string name="example">Example</string>
    <string name="select">Select</string>
    <string name="start">Start</string>

    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>

    <string name="confirm">confirm</string>



<!--Activity-->
    <!--SignUpActivity-->
    <string name="enter_id">Please enter your ID.</string>
    <string name="enter_password">Please enter your Password.</string>
    <string name="enter_password_confirm">Please enter your password verification.</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="enter_phone_number">Please enter your Phone Number.</string>
    <string name="enter_authentication_number">Please enter your authentication number.</string>
    <string name="check_duplicates">Please check duplicates.</string>
    <string name="authentication_was_successful">Authentication was successful</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="the_id_is_available_to_use">The id is available to use.</string>

    <!--FolderActivity-->
    <string name="rename_folder">Rename a folder</string>
    <string name="please_enter_new_name">Please enter a new name for this folder.</string>

    <!--SnakeView-->
    <string name="mode_ready">Snake\nPress Up To Play</string>
    <string name="mode_pause">Paused\nPress Up To Resume</string>
    <string name="mode_lose_prefix">Game Over\nScore: </string>
    <string name="mode_lose_suffix">\nPress Up To Play</string>
    <!--<string name="str1">점수: </string>-->
    <!--<string name="str2"/>-->
    <!--<string name="str3">속도: </string>-->
    <!--<string name="str4"/>-->

    <!--PermissionUtil-->
    <string name="request_permission_title">Request Permissions</string>
    <string name="request_permission_content">You need to be able to save with the pictures you need for notes.</string>



<!--layout - activity-->
    <!--activity_sign_in-->
    <string name="hint_id">ID</string>
    <string name="hint_password">Password</string>
    <string name="auto_sign_in">Auto-Login</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Join membership</string>

    <!--activity_sign_up-->
    <string name="hint_password_4">Password/More than four digits</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="cancellation">Cancellation</string>
    <string name="password_notes">Please enter the number without "-".</string>
    <string name="check_redundancy">Check redundancy</string>
    <string name="hint_cellphone">Mobile phone</string>
    <string name="hint_number_authentication">Number authentication</string>
    <string name="hint_certification_number">Authentication confirmation</string>
    <string name="authentication">Authentication</string>

    <!--activity_game-->
    <string name="game">Game</string>
    <string name="game_1to50">1to50</string>
    <string name="game_snake">Snake</string>
    <string name="game_cancellation">Deselect Game</string>

    <!--activity_version-->
    <string name="current_version">Current version</string>
    <string name="new_version">The latest version</string>
    <string name="update_version">A version update is required.</string>
    <string name="current_new_version">This is the latest version.</string>

    <!--activity_timer_countdown-->
    <string name="please_enter_second">Please enter second</string>
    <string name="count_down_start">Count Down Start</string>
    <string name="timer_start">Timer Start</string>
    <string name="timer_stop">Timer Stop</string>
    <string name="termination">Termination</string>
    <string name="timer_init">00 : 00 : 00</string>

    <!--activity_folder-->
    <string name="folder">Folder</string>
    <string name="create_new_folder">New Folder</string>
    <string name="delete">Delete</string>



<!--layout - fragment-->
    <!--fragment_main-->
    <string name="memo">Memo</string>
    <string name="edit">Edit</string>
    <string name="completion">Completion</string>
    <string name="search">Search</string>
    <string name="count_of_memo">notes</string>

    <!--fragment_main_etc-->
    <string name="settings">Settings</string>
    <string name="alarm">Alarm</string>
    <string name="timer">Timer</string>
    <string name="log_out">Log out</string>
    <string name="version">App Version</string>

    <!--fragment_splash_first-->
    <string name="simple_sign_up">Simple Membership</string>
    <!--fragment_splash_second-->
    <string name="manage_various_folders">Enables you to manage your notes wherever you want with various folders</string>
    <!--fragment_splash_third-->
    <string name="manage_note">Manage notes by hour</string>
    <!--fragment_splash_forth-->
    <string name="manage_various_functions">Increased efficiency of managing memos with various functions</string>



    <!--layout - etc-->
    <string name="util_dilaog_edit_name">Name</string>
    <string name="util_dilaog_text_save">Save</string>



<!--ETC-->
    <!--Toast-->
    <string name="back_press">Press one more time to exit.</string>
    <string name="DBHelper_make_table">Table created.</string>
    <string name="DBHelper_change_version">Application version has been upgraded.</string>
    <string name="DBHelper_insert_data">Data insertion completed.</string>
    <string name="SQLiteUtil_enter_name">Please enter your name.</string>
    <string name="SQLiteUtil_enter_age">Please enter your age.</string>
    <string name="SQLiteUtil_enter_cellphone">Please enter your mobile phone number.</string>
    <string name="SignUpActivity_please_enter_your_phone_number">Please enter your phone number.</string>
    <string name="SignUpActivity_authentication_number">Authentication number</string>
    <string name="FragmentWrite_please_enter_a_message">Please enter a message.</string>
    <string name="SignInActivity_ID_PW_check">Please check your ID or password again.</string>
    <string name="TimerCountDown_please_enter_the_correct_time">Please enter the correct time.</string>
    <string name="TimerCountDown_the_count_is_complete">The count is complete.</string>

    <!--Dialog-->
    <string name="dialog_content_log_out">Are you sure you want to log out?</string>
    <string name="dialog_content_create_new_folder">Please enter a name for this folder.</string>
</resources>
