<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <EditText
        android:id="@+id/Timer_edit_text_count_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="@string/please_enter_second"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/silver" />

    <Button
        android:id="@+id/Timer_button_count_down_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_button"
        android:text="@string/count_down_start"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/Timer_text_view_count_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:background="@color/black" />

    <Button
        android:id="@+id/Timer_button_timer_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_button"
        android:text="@string/timer_start"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/Timer_text_view_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/timer_init"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Timer_button_timer_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_button"
        android:text="@string/timer_stop"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/Timer_button_termination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/termination"
        android:textColor="@color/black" />

</LinearLayout>