<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/fragmentMainEtc_relative_layout_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@null">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:includeFontPadding="false"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragmentMainEtc_relative_layout_title"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/fragmentMainEtc_button_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/alarm"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/fragmentMainEtc_button_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/timer"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/fragmentMainEtc_button_game_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/game_1to50"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/fragmentMainEtc_button_game_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/game_snake"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/fragmentMainEtc_button_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/fragmentMainEtc_button_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>