<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <RelativeLayout
        android:id="@+id/utilDialogEdit_relative_layout"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@color/dialog_background"
        android:gravity="center">

        <TextView
            android:id="@+id/utilDialogEdit_text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/utilDialogEdit_text_view_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/utilDialogEdit_text_view_title"
            android:gravity="center"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/utilDialogEdit_edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/utilDialogEdit_text_view_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/util_dilaog_edit_name"
            android:textColor="@color/black"
            android:textColorHint="@color/silver"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/utilDialogEdit_text_view_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/util_dilaog_text_save"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/utilDialogEdit_text_view_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancellation"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>