<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <RelativeLayout
        android:id="@+id/dialog_rl"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:gravity="center">

        <TextView
            android:id="@+id/dialog_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dialog_tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_tv_title"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_tv_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/button_color"
                android:gravity="center"
                android:text="@string/yes"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/dialog_tv_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/button_color"
                android:gravity="center"
                android:text="@string/no"
                android:textSize="20dp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>