<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/folderA_relative_layout_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@null">

        <TextView
            android:id="@+id/folderA_text_view_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:text="@string/edit"
            android:textColor="@color/orange"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/folderA_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/folderA_relative_layout_title"
        android:layout_margin="15sp"
        android:includeFontPadding="false"
        android:text="@string/folder"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/folderA_text_view_new_folder"
        android:layout_below="@+id/folderA_text_view_title">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/folderA_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/folderA_text_view_create_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/create_new_folder"
        android:textColor="@color/orange"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/folderA_text_view_delete_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/delete"
        android:textColor="@color/orange"
        android:textSize="15sp"
        android:visibility="gone" />

</RelativeLayout>